css/app.css
html, body {
    overflow-x: hidden;
    margin: 0;
}

body {
    font-family: 'Segoe UI', sans-serif;
    position: relative;
    height: 100vh;
}

span {
    font-style: italic;
}

.selector {
    width: 100%;
}

#result-dist {
    box-sizing: border-box;
    font-family: sans-serif;
    border: dashed red;
}

#result-img {
    box-sizing: border-box;
    font-family: sans-serif;
    width: 30%;
    height: 100%;
    text-align: center;
}

#result-text {
    width: 60%;
    top: 50%;
    transform: translateY(-50%);
    position: absolute;
    right: 0;
    font-size: large;
    padding-right: 10%;
}

.arrow-img {
    height: 100%;
}

.svg_map {
    width: 100%;
    height: 100%;
    visibility: hidden;
    position: absolute;
}

#main {
    width: 100%;
    position: absolute;
    top: 20vh;
    bottom: 10vh;
    height: 70vh;
    z-index: auto;
    overflow: hidden;
}

#heading {
    text-align: center;
}

#top {
    height: 20vh;
    width: 100%;
    position: absolute;
    top: 0;
    z-index: 2;
    padding: 0;
    box-shadow: 0 10px 5px #888888;
}

#bottom {
    height: 10vh;
    width: 100%;
    position: absolute;
    bottom: 0;
    z-index: 2;
    box-shadow: 0 -10px 5px #888888;
}

.btn {
    width: 33%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;

}

#back_btn {
    left: 0;
    position: absolute;
}

#previous_btn {
    left: 50%;
    right: 50%;
    transform: translateX(-50%);
    position: absolute;
}

#next_btn {
    right: 0;
    position: absolute;
}

